# ChangeVoice

app/: build.gradle
app/src/androidTest/java/com/example/liuhai/changervoice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/inc/: org_fmod_example_EffectUtils.h
app/src/main/java/com/example/liuhai/changervoice/: EffectUtils.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/liuhai/changervoice/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
